SERVER-47169 Call ShardRegistry::updateReplSetHosts() synchronously